# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  aabb.h  benchmark.zsh  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  main_header.h  material.h  ray.h  sphere.h  vec3.h  viewer.py
